--- a/source/styles/blocks/main-nav.scss
+++ b/source/styles/blocks/main-nav.scss
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: flex-end;
 
-  @media(min-width: $tablet-width) {
+  @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: repeat(3, auto);
   }
@@ -100,7 +100,6 @@
 
     @media (min-width: $tablet-width) {
       position: static;
-      @include list-reset;
       display: flex;
       grid-area: 1;
       column-gap: 2px;
@@ -127,7 +126,7 @@
   font-weight: 500;
   padding-block: 21px 19px;
 
-  @media(min-width: $tablet-width) {
+  @media (min-width: $tablet-width) {
     position: relative;
     padding: 31px 20px;
   }
@@ -141,10 +140,10 @@
   position: relative;
 
   &:active {
-    background-color: #F0EBFF;
+    background-color: var(--base-primary-active, #f0ebff);
   }
 
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     font-size: 12px;
     line-height: 16px;
     width: auto;
@@ -156,15 +155,14 @@
 }
 
 .main-nav__account {
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     padding-inline: 22px 22px;
     margin-inline-end: 18px;
   }
 }
 
 .main-nav__basket {
-
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     padding-inline: 24px 0;
   }
 }
@@ -194,7 +192,7 @@
     top: 32px;
   }
 
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     position: static;
   }
 }
@@ -203,7 +201,7 @@
 .main-nav__basket-enter {
   display: none;
 
-  @media(min-width: $desktop-width) {
+  @media (min-width: $desktop-width) {
     display: block;
     font-size: 12px;
     line-height: 16px;
@@ -211,12 +209,12 @@
 }
 
 .main-nav__link--active::after {
-  content:"";
+  content: "";
   display: block;
   position: absolute;
   width: 103px;
   height: 2px;
   background-color: var(--base-primary, #7859cf);
-  bottom: 0px;
+  bottom: 0;
   left: 0;
 }
