--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -5,6 +5,7 @@ $desktop-width: 1440px;
   --slider-background: #f3ebe1;
   --base-black: #333333;
   --base-primary: #7859cf;
+  --base-primary-active: #f0ebff;
   --base-white: #ffffff;
   --smoky-white: #f8f8f8;
   --base-gray: #bdbdbd;
