--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -11,7 +11,7 @@
 @import "./blocks/page.scss";
 @import "./blocks/container";
 @import "./blocks/swiper-slide.scss";
-@import "./blocks/slider-price.scss";
+@import "./blocks/swiper-price.scss";
 @import "./blocks/advantages.scss";
 @import "./blocks/filter.scss";
 @import "./blocks//catalog.scss";
